--- a/stock_dashboard/stock_dashboard.ini
+++ b/stock_dashboard/stock_dashboard.ini
@@ -6,6 +6,7 @@ chdir = ./
 #wsgi-file = wsgi.py
 threads = 2
 http-socket = 0.0.0.0:5000
+socket = 0.0.0.0:5001
 #protocol = http
 #chmod-socket = 600
 vacuum = true
